fix: enhance dark mode styles for better visibility and consistency across components

--- a/src/styles/components/faq.less
+++ b/src/styles/components/faq.less
@@ -198,6 +198,7 @@
       .cs-title,
       .cs-item-text {
         color: var(--bodyTextColorWhite);
+        background-color: var(--background-sections);
       }
 
       .cs-topper {
@@ -227,6 +228,7 @@
       .cs-button {
         color: var(--bodyTextColorWhite);
         border-color: var(--accent);
+        background-color: var(--background-sections);
 
         &:before,
         &:after {
