--- a/src/styles/dark.less
+++ b/src/styles/dark.less
@@ -79,7 +79,7 @@
     h4,
     h5,
     h6 {
-      color: var(--text-primary);
+      color: var(--text-primary) !important;
     }
 
     // hide all light classes
